# Fastsocks-simple

./: .gitignore  README.md  settings.gradle
app/: build.gradle  debug.keystore  google-services.json
app/src/androidTest/java/com/me/fastsocks_simple/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/me/fastsocks_simple/: MainActivity.java  MainApplication.java
app/src/main/java/com/me/fastsocks_simple/base/: OnRecvListener.java  PackageDispatcher.java
app/src/main/java/com/me/fastsocks_simple/message/: ImageMessageModel.java  MessageModel.java  TextMessageModel.java  VoiceMessageModel.java
app/src/main/java/com/me/fastsocks_simple/sys/: MsgReceptorService.java  TokenCreaterService.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/me/fastsocks_simple/: ExampleUnitTest.java
fastsocks/: .gitignore  build.gradle  proguard-rules.pro
fastsocks/cpp/: Android.mk  CMakeLists.txt  NativeLoader.cpp  jni.c
fastsocks/cpp/common/: FileLog.cpp  FileLog.h  FormatTools.cpp  FormatTools.h  android_jni.cpp  android_jni.h
fastsocks/cpp/tcp/: BufferStorage.cpp  BufferStorage.h  ByteArray.cpp  ByteArray.h  ByteStream.cpp  ByteStream.h  ConnectionsManager.cpp  ConnectionsManager.h  Datacenter.cpp  Datacenter.h  EventsDispatcher.cpp  EventsDispatcher.h  NativeByteBuffer.cpp  NativeByteBuffer.h  NetworkMessage.cpp  NetworkMessage.h  Request.cpp  Request.h  TcpConnection.cpp  TcpConnection.h  TcpConstant.h  TcpNetWapper.cpp  TcpServer.cpp  TcpServer.h  TcpSocket.cpp  TcpSocket.h  Timer.cpp  Timer.h
fastsocks/src/androidTest/java/com/me/fastsocks/: ExampleInstrumentedTest.java
fastsocks/src/main/: AndroidManifest.xml
fastsocks/src/main/res/values/: strings.xml
fastsocks/src/test/java/com/me/fastsocks/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+14 files in other folders)
